--- a/index.html
+++ b/index.html
@@ -3,10 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>APE 100</title>
+
+    <style>
+        
+        .head {
+            background-image: url(img/Manu.jpg) ;
+            background-repeat: repeat-x;
+            background-size: 940px ;
+            text-align: center;
+            padding: 180px;   
+            
+        }
+
+        .head h1 {
+            color: rgb(173, 65, 65);
+            font-size: 75px;
+            font-family: Tahoma;    
+
+        }
+        .head p {
+            color: rgb(84, 184, 167);
+            font-size: 25px;
+            font-family: Tahoma;            
+        } 
+        .menu {
+            background-color: rgb(190, 197, 212);
+            overflow: hidden;
+
+        }
+        .menu a {
+            display: block;
+            float: left;
+            padding: 10px 20px;
+            text-decoration: none;
+            transition: all 0.5s ease;
+        }
+        .menu a:hover {
+            background-color: darkgoldenrod;
+        }
+        .p {
+            font-family: tahoma;
+            font-size: 70px;
+            color: white;
+        }
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
-<body>
-    <h1>APE 100</h1>
+<body bgcolor="black">
+    <div class="head">
+        <h1>APE100 <br> WEBSITE</h1>
+
+    </div>
+<div class="menu">
+    <a href="ape 100.html" target="_blank">APE 100</a>
+    <a href="ape 112.html" target="_blank">APE 112</a>
+    <a href="ape 122.html" target="_blank">APE 122</a>
+    <a href="phy 104.html" target="_blank">PHY 104</a>
+    <a href="phy 192.html" target="_blank">PHY 192</a>
+    <a href="mth 102.html" target="_blank">MTH 102</a>
+    <a href="gen 111.html" target="_blank">GEN 111</a>
+    <a href="https://www.thaiwebsites.com/healthcare(2).asp">LNG 220</a>
+</div>
+<div class="p">Created by <a href="63070504801.html">Kantanop Janpa</a></p>    
 </body>
 </html>
